WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304613
Hugging outline fails to enclose trailing content
https://bugs.webkit.org/show_bug.cgi?id=304613
Summary
Hugging outline fails to enclose trailing content
alan
Reported
2025-12-22 13:59:24 PST
ssia
Attachments
Patch
(4.37 KB, patch)
2025-12-22 14:15 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.60 KB, patch)
2025-12-23 07:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-22 14:15:39 PST
Created
attachment 477826
[details]
Patch
alan
Comment 2
2025-12-23 07:47:01 PST
Created
attachment 477830
[details]
[fast-cq]Patch
EWS
Comment 3
2025-12-23 12:49:05 PST
Committed
304908@main
(72507aefee70): <
https://commits.webkit.org/304908@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477830
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-12-23 12:50:14 PST
<
rdar://problem/167098631
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug