Source/WebCore/platform/graphics/PathUtilities.cpp
@@ -91,7 +91,11 @@ private:
 FloatPointGraph::Node* FloatPointGraph::findOrCreateNode(FloatPoint point)
 {
     for (auto& testNode : m_allNodes) {
-        if (areEssentiallyEqual(*testNode, point))
+        auto tolerance = [&] (auto a, auto b) {
+            auto toleranceInPixel = 0.005f;
+            return toleranceInPixel / std::max(std::abs(a), std::abs(b)) * 100.f;
+        };
+        if (WTF::areEssentiallyEqual(testNode->x(), point.x(), tolerance(testNode->x(), point.x())) && WTF::areEssentiallyEqual(testNode->y(), point.y(), tolerance(testNode->y(), point.y())))
             return testNode.get();
     }
 
